PCHR-402: Fix toolbar margin
The toolbar had a negative margin of -20px applied to it, causing scrollbars to appear on the whole pag if the toolbar was present. Resetting the margin and the toolbar does the trick

--- a/civihr_default_theme/assets/sass/partials/_toolbar.scss
+++ b/civihr_default_theme/assets/sass/partials/_toolbar.scss
@@ -3,5 +3,7 @@
  */
 #toolbar {
     box-shadow: none;
+    margin: 0;
+    padding: 0;
     position: static;
 }
